--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.14.1",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "use-sound": "^4.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
