--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.56",
+    "emailjs": "^4.0.3",
     "framer-motion": "^11.15.0",
     "gsap": "^3.12.5",
     "next": "15.1.3",
@@ -21,6 +23,7 @@
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.14.1",
     "react-scroll": "^1.9.0",
+    "sonner": "^2.0.1",
     "use-sound": "^4.0.3"
   },
   "devDependencies": {
