--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emailjs/browser": "^4.4.1",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@sendgrid/mail": "^8.1.4",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.56",
     "emailjs": "^4.0.3",
@@ -20,10 +21,11 @@
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.14.1",
     "react-scroll": "^1.9.0",
-    "sonner": "^2.0.1",
+    "sonner": "^2.0.3",
     "use-sound": "^4.0.3"
   },
   "devDependencies": {
