--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,47 +27,19 @@ jobs:
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v2
       # project_id is automatically inferred from the credentials_json
-      # with:
-      #   project_id: sidis-439317
 
-    # --- TEMPORARILY COMMENTED OUT SCP FOR DEBUGGING ---
-    # - name: Copy files to GCE instance
-    #   run: |-
-    #     # Ensure the gcloud-managed SSH key directory exists
-    #     mkdir -p ~/.ssh
-    #     # Use gcloud compute scp, assuming gcloud handles SSH key management or you have configured it
-    #     gcloud compute scp --recurse . teacchserver:/var/www/teacchlanding \
-    #       --zone "us-central1-c" \
-    #       --project "sidis-439317" \
-    #       # Add --ssh-key-file flag if NOT using default gcloud keys
-
-    # --- DEBUGGING STEP: Test SSH Write Permission ---
-    - name: Test SSH write permission as runner
-      id: 'ssh-test-write'
-      uses: 'google-github-actions/ssh-compute@v1'
-      with:
-        instance_name: 'teacchserver'
-        zone: 'us-central1-c'
-        project_id: 'sidis-439317'
-        ssh_private_key: '${{ secrets.GCP_SSH_PRIVATE_KEY }}'
-        user: 'runner' # Explicitly specify the user
-        command: |
-          echo "Attempting to write file as $(whoami) in $(pwd)"
-          touch /var/www/teacchlanding/test_from_gha_runner.txt
-          ls -l /var/www/teacchlanding/test_from_gha_runner.txt
-          echo "Write test successful"
-      continue-on-error: true # Allow workflow to continue even if this fails
-
-    # Check if the test write failed
-    - name: Check Test Write Result
-      if: steps.ssh-test-write.outcome == 'failure'
-      run: |
-        echo "SSH write test failed. User 'runner' likely does not have permission or the SSH key is incorrect."
-        exit 1 # Fail the workflow
+    # 3. Transfer Files using gcloud scp
+    - name: Copy files to GCE instance
+      run: |-
+        # Ensure the gcloud-managed SSH key directory exists
+        mkdir -p ~/.ssh
+        # Use gcloud compute scp, assuming gcloud handles SSH key management or you have configured it
+        gcloud compute scp --recurse . teacchserver:/var/www/teacchlanding \
+          --zone "us-central1-c" \
+          --project "sidis-439317" \
+          # Add --ssh-key-file flag if NOT using default gcloud keys
 
     # 4. Execute remote commands using ssh-compute
-    # Note: This step will likely fail if the SCP step is commented out, 
-    # as the code won't be present. Re-enable SCP once permissions are fixed.
     - id: 'ssh-command'
       uses: 'google-github-actions/ssh-compute@v1'
       with:
@@ -76,7 +48,7 @@ jobs:
         project_id: 'sidis-439317' # Explicitly set project ID
         # Use the secret containing ONLY the private key PEM block
         ssh_private_key: '${{ secrets.GCP_SSH_PRIVATE_KEY }}'
-        # user: 'your_ssh_user' # Optional: Specify if not using default user or OS Login
+        user: 'runner' # Explicitly specify the user the key corresponds to
 
         # The command(s) to run on the remote instance
         command: |
@@ -85,6 +57,7 @@ jobs:
           cd /var/www/teacchlanding
 
           echo "Installing dependencies..."
+          # Use sudo for npm install/build if necessary based on global packages/permissions
           sudo npm install --legacy-peer-deps
 
           echo "Building application..."
